--- a/src/assets/css/userinformation.css
+++ b/src/assets/css/userinformation.css
@@ -33,6 +33,12 @@
   color: #1f1f1f;
   font-family: "Inter", sans-serif;
   font-weight: 500;
+  transition: all 0.2s ease-in-out;
+}
+.user-card .contact-button:hover {
+  background-color: transparent;
+  color: #28e98c;
+  border: 1px solid #28e98c;
 }
 .user-card__image {
   height: 18rem;
@@ -44,9 +50,13 @@
   border-radius: 20px;
 }
 .user-card__image__photo {
-  -o-object-fit: cover;
-     object-fit: cover;
+  filter: grayscale(1);
   width: 100%;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.user-card__image__photo:hover {
+  filter: grayscale(0);
 }
 .user-card__header {
   display: flex;
@@ -72,7 +82,7 @@
   gap: 1rem;
 }
 .user-card__footer__email {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #fff;
 }
 .user-card__footer__based {
@@ -83,7 +93,6 @@
   margin-top: 2rem;
   font-size: 1rem;
   text-align: center;
-  font-weight: 400;
 }
 .user-card__social-links {
   margin-top: 2rem;
