--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -66,6 +66,12 @@
   font-weight: 400;
   line-height: 4.8rem;
 }
+@media (min-width: 320px) and (max-width: 767px) {
+  .container__header {
+    font-size: 3.2rem;
+    line-height: 3.2rem;
+  }
+}
 @media (min-width: 1176px) and (max-width: 1199px) {
   .container {
     margin-left: 40%;
