--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -74,6 +74,11 @@
         line-height: 3.6rem;
         font-weight: 400;
         line-height: 4.8rem;
+
+        @include breakpoint.between("xs", "md") {
+            font-size: 3.2rem;
+            line-height: 3.2rem;
+        }
     }
 
     @include breakpoint.between("desktop", "xl") {
