--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -248,3 +248,75 @@
         }
     }
 }
+
+.education-tile {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #999999;
+    padding: 2rem;
+    border-radius: 10px;
+    cursor: pointer;
+
+    overflow: hidden;
+
+    
+    &:hover {
+        border: 1px solid #28e98c;       
+    }
+    
+    &__body {
+        display: flex;
+        flex-direction: column;
+
+        p {
+            margin-top: 2rem;
+        }
+
+        h2 {
+            margin-top: 2rem;
+        }
+
+        ul {
+            margin-top: 1rem;
+            padding-left: 40px;
+
+            li {
+                margin-top: 1rem;
+                list-style:square;
+            }
+
+            h2 {
+                margin-top: 0rem;
+            }
+
+            p {
+                margin-top: 0;
+            }
+        }
+    }
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+
+        &__left {
+            display: flex;
+            flex-direction: column;
+            gap: .2rem;
+            
+            h2 {
+                font-weight: 500;
+                font-size: 1.2rem;
+            }
+        }
+
+        &__right {
+            display: flex;
+            flex-direction: column;
+            gap: .2rem;
+            text-align: right;
+        }
+    }
+
+}
