--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -164,7 +164,7 @@
     min-width: 100%;
     border-radius: 20px;
     border: 1px solid #999999;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1.4rem;
@@ -214,14 +214,14 @@
 
 .skills-container {
     max-width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     display: grid;
     gap: 2em;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     padding: 0;
 
     .skill {
-        padding: 2rem;
+        padding: 1rem;
         border: 1px solid #999999;
         border-radius: 10px;
         cursor: pointer;
@@ -242,7 +242,7 @@
             }
 
             h2 {
-                font-size: 1.2rem;
+                font-size: 1rem;
                 font-weight: 500;
             }
         }
@@ -254,7 +254,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid #999999;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
 
@@ -271,6 +271,7 @@
 
         p {
             margin-top: 2rem;
+            line-height: 1.6rem;
         }
 
         h2 {
@@ -319,4 +320,48 @@
         }
     }
 
+}
+
+.award-container {
+    width: 100%;
+    border: 1px solid #999999;
+    border-radius: 10px;
+    padding: 1rem;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    &:hover {
+        border: 1px solid #28e98c;
+    }
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+
+        h2 {
+            font-size: 1rem;
+            font-weight: 500;
+        }
+    }
+
+    &__body {
+        p {
+            line-height: 1.6rem;
+        }
+    }
+
+    a {
+        text-decoration: none;
+        color: #28e98c;
+    
+        &:visited {
+            color: #28e98c;
+        }
+    
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
