--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -26,7 +26,7 @@
   font-weight: 400;
   width: 100%;
 }
-@media (min-width: 320px) and (max-width: 1175px) {
+@media (min-width: 320px) and (max-width: 1079px) {
   .container form input {
     width: 100%;
   }
@@ -48,7 +48,7 @@
   border: 1px solid #28e98c;
   outline: 0 none;
 }
-@media (min-width: 320px) and (max-width: 1175px) {
+@media (min-width: 320px) and (max-width: 1079px) {
   .container form textarea {
     width: 100%;
   }
@@ -73,7 +73,7 @@
     line-height: 3.2rem;
   }
 }
-@media (min-width: 1176px) and (max-width: 1199px) {
+@media (min-width: 1080px) and (max-width: 1199px) {
   .container {
     margin-left: 40%;
   }
@@ -87,12 +87,12 @@
     margin-left: 40%;
   }
 }
-@media (min-width: 1400px) and (max-width: 1799px) {
+@media (min-width: 1400px) and (max-width: 1919px) {
   .container {
     margin-left: 18rem;
   }
 }
-@media (min-width: 1800px) {
+@media (min-width: 1920px) {
   .container {
     margin-left: 6rem;
   }
@@ -130,6 +130,9 @@
 
 .project-card {
   border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 .project-card__image {
   width: 100%;
@@ -147,6 +150,13 @@
 .project-card a:hover {
   text-decoration: underline;
   color: #28e98c;
+}
+
+.project-image {
+  border-radius: 10px;
+  -o-object-fit: fill;
+     object-fit: fill;
+  width: 100%;
 }
 
 .service-card {
