--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -15,6 +15,7 @@ button {
   background: transparent;
   border: none;
   font-size: 1.2rem;
+  z-index: 100;
 }
 @media (min-width: 768px) {
   button {
