--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -3,14 +3,14 @@
 .home {
     max-width: 1024px;
     margin: 0 auto;
-    
+
     display: flex;
     flex-direction: column;
 }
 
 .container {
     padding: 1rem;
-    
+
     form {
         display: grid;
         width: 80%;
@@ -60,7 +60,7 @@
     }
 
     overflow: hidden;
-    
+
     section {
         display: flex;
         flex-direction: column;
@@ -68,7 +68,7 @@
         margin-top: 6rem;
         min-height: 50vh;
     }
-    
+
     &__header {
         font-size: 4.2rem;
         color: #fff;
@@ -138,6 +138,9 @@
 
 .project-card {
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 
     &__image {
         width: 100%;
@@ -158,6 +161,12 @@
             color:#28e98c;
         }
     }
+}
+
+.project-image {
+    border-radius: 10px;
+    object-fit: fill;
+    width: 100%;
 }
 
 .service-card {
@@ -260,11 +269,11 @@
 
     overflow: hidden;
 
-    
+
     &:hover {
-        border: 1px solid #28e98c;       
+        border: 1px solid #28e98c;
     }
-    
+
     &__body {
         display: flex;
         flex-direction: column;
@@ -305,7 +314,7 @@
             display: flex;
             flex-direction: column;
             gap: .2rem;
-            
+
             h2 {
                 font-weight: 500;
                 font-size: 1.2rem;
@@ -355,11 +364,11 @@
     a {
         text-decoration: none;
         color: #28e98c;
-    
+
         &:visited {
             color: #28e98c;
         }
-    
+
         &:hover {
             text-decoration: underline;
         }
