--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -133,6 +133,8 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  border: 1px solid #28e98c;
+  padding: 1rem;
 }
 .project-card__image {
   width: 100%;
@@ -153,9 +155,11 @@
 }
 
 .project-image {
-  border-radius: 10px;
-  -o-object-fit: fill;
-     object-fit: fill;
+  border-radius: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-attachment: fixed;
+  height: 20rem;
   width: 100%;
 }
 
