--- a/src/Components/user/userinformation.scss
+++ b/src/Components/user/userinformation.scss
@@ -11,6 +11,15 @@
     display: flex;
     flex-direction: column;
 
+    a {
+        text-decoration: none;
+        font-weight: 500;
+
+        &:hover {
+            color:#28e98c;
+        }
+    }
+
     @include breakpoint.up("desktop") {
         position: fixed;
         top: 50%;
@@ -35,7 +44,7 @@
         font-family: 'Inter', sans-serif;
         font-weight: 500;
         transition: all .2s ease-in-out;
-        
+
     &:hover {
         background-color: transparent;
         color: #28e98c;
@@ -78,7 +87,7 @@
         &__title {
             text-align: right;
             line-height: 1.2rem;
-            color: #FFF;
+            color: #28e98c;
         }
     }
 
