--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -102,15 +102,20 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2rem;
   margin-top: 2rem;
 }
 @media (min-width: 768px) {
   .contact-links {
     flex-direction: column;
     margin-top: 0;
-    gap: 2rem;
   }
+}
+.contact-links li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .menu-nav.show-menu {
