--- a/src/assets/css/userinformation.css
+++ b/src/assets/css/userinformation.css
@@ -9,7 +9,14 @@
   display: flex;
   flex-direction: column;
 }
-@media (min-width: 1176px) {
+.user-card a {
+  text-decoration: none;
+  font-weight: 500;
+}
+.user-card a:hover {
+  color: #28e98c;
+}
+@media (min-width: 1080px) {
   .user-card {
     position: fixed;
     top: 50%;
@@ -71,7 +78,7 @@
 .user-card__header__title {
   text-align: right;
   line-height: 1.2rem;
-  color: #FFF;
+  color: #28e98c;
 }
 .user-card__footer {
   margin-top: 2rem;
