--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -119,7 +119,7 @@
     font-size: 1rem;
     color: #fff;
 
-    p {
+    h2 {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -141,8 +141,13 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    border: 1px solid #28e98c;
+    border: 1px solid #999999;
     padding: 1rem;
+    cursor: pointer;
+
+    &:hover {
+        border: 1px solid #28e98c;
+    }
 
     &__image {
         width: 100%;
@@ -185,6 +190,8 @@
     &__header {
         h2 {
             font-size: 1.4rem !important;
+            color: #28e98c;
+            font-weight: 500;
         }
 
         min-width: 100%;
@@ -238,9 +245,17 @@
         border: 1px solid #999999;
         border-radius: 10px;
         cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 2rem;
 
         &:hover {
             border: 1px solid #28e98c;
+        }
+
+        img {
+            max-width: 40%;
         }
 
         .skill__header {
@@ -248,6 +263,7 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 2rem;
+            width: 100%;
 
             i {
                 color: #28e98c;
